tests/negative/Package/PackageJuvixPackageSymbolWrongType2/Package.juvix
module Package;

import Stdlib.Prelude open;

type Package := p;
open Package;

package : Package := p;
